add favicon and admin-rules

--- a/public/builder/main-template.html
+++ b/public/builder/main-template.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>TopHotels Award Email</title>
+<link rel="icon" href="../favicon.png" type="image/x-icon" />
+
 <style type="text/css">
 @media only screen and (max-width: 600px) {
   .email-container {
