--- a/public/blinks.html
+++ b/public/blinks.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Мои проекты</title>
+  <link rel="icon" href="favicon.png" type="image/x-icon" />
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
@@ -159,36 +161,37 @@ auth.onAuthStateChanged(async (user) => {
   const app = document.getElementById('app');
 
   if (!user) {
-    // ❌ Не авторизований — показуємо кнопку входу
     loginScreen.style.display = 'block';
     app.style.display = 'none';
   } else {
-    // ✅ Авторизований — ховаємо логін і показуємо app
     loginScreen.style.display = 'none';
     app.style.display = 'block';
 
     document.getElementById('logoutBtn').innerText = user.displayName || 'Выйти';
 
-
-    // ✅ Сохраняем пользователя в Firestore под UID (если его ещё нет)
+    // Проверяем и создаём пользователя в Firestore, если его нет
     const userDocRef = firebase.firestore().collection('users').doc(user.uid);
     const doc = await userDocRef.get();
     if (!doc.exists) {
       await userDocRef.set({
         email: user.email,
-        type: 'user'
+        type: 'user' // по умолчанию обычный юзер
       });
     }
 
-    // Загружаем данные
-    loadProjects(user.uid);
+    // 🆕 Читаем роль пользователя
+    const userData = (await userDocRef.get()).data();
+    const isAdmin = userData?.type === 'admin';
+
+    // Загружаем проекты
+    loadProjects(user.uid, isAdmin);
     await loadAllUsers();
   }
 
-  // ✅ Убираем прелоадинг и включаем анимацию
   document.body.classList.remove('loading');
   document.body.classList.add('loaded');
 });
+
 
 
 
@@ -227,9 +230,8 @@ window.changeProjectStatus = async function (projectId, newStatus) {
   }
 };
 
-    async function loadProjects(userId) {
-        // USER ID ADMIN
-const isAdmin = userId === 'uaLaAOAxa1SgNP3fKPbvkzG8asa2';
+async function loadProjects(userId, isAdmin) {
+  // USER ID ADMIN
 
       const res = await fetch(`/api/user-projects?userId=${userId}`);
       const projects = await res.json();
