--- a/public/sent-hotels.html
+++ b/public/sent-hotels.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Отправленные письма</title>
+  <link rel="icon" href="favicon.png" type="image/x-icon" />
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-dark text-light">
