add autorization for some pages

--- a/public/sent.html
+++ b/public/sent.html
@@ -17,6 +17,9 @@
       background-color: rgba(25, 135, 84, 0.25) !important; /* Bootstrap green with transparency */
     }
   </style>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="/firebase-init.js"></script>
 
 </head>
 <body class="bg-dark text-white p-4">
