--- a/public/email-builder-hotels.html
+++ b/public/email-builder-hotels.html
@@ -13,6 +13,11 @@
     .sidebar { background: #333; padding: 20px; border-radius: 10px; }
     textarea { min-height: 150px; }
   </style>
+
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="/firebase-init.js"></script>
+
 </head>
 <body class="bg-dark text-white p-4">
 
