--- a/public/email-builder.html
+++ b/public/email-builder.html
@@ -11,6 +11,11 @@
     rel="stylesheet"
   >
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="/firebase-init.js"></script>
+
+
 
   <style>
     body {
@@ -37,6 +42,7 @@
   </style>
 </head>
 <body>
+    
   <div class="container-fluid">
     <nav class="d-flex justify-content-between align-items-center mb-4">
       <div>
