--- a/public/invalid.html
+++ b/public/invalid.html
@@ -11,7 +11,10 @@
     rel="stylesheet"
   >
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="/firebase-init.js"></script>
+  
 </head>
 <body class="bg-dark text-white p-4">
   <div class="container">
