--- a/public/research-hotels.html
+++ b/public/research-hotels.html
@@ -7,6 +7,11 @@
 
   <title>Research Отелей</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="/firebase-init.js"></script>
+  
+
 </head>
 <body class="bg-dark text-white p-4">
 
