--- a/public/sent-hotels.html
+++ b/public/sent-hotels.html
@@ -6,6 +6,10 @@
   <link rel="icon" href="favicon.png" type="image/x-icon" />
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="/firebase-init.js"></script>
+
 </head>
 <body class="bg-dark text-light">
 <div class="container py-5">
