--- a/public/builder/builder-hotels.html
+++ b/public/builder/builder-hotels.html
@@ -5,7 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Email Template Builder</title>
 <link rel="icon" href="../favicon.png" type="image/x-icon" />
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 
+<script src="/firebase-init.js"></script>
 <style>
   body {
     font-family: Arial, sans-serif;
