--- a/public/blinks.html
+++ b/public/blinks.html
@@ -10,7 +10,8 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-  
+  <script src="/firebase-init.js" defer></script>
+
 
 </head>
 <body class="bg-dark text-light p-4 loading">
